generated/nixidy/prod/alertmanager/Service-alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: alertmanager
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: alertmanager
  name: alertmanager
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 9093
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: alertmanager
    app.kubernetes.io/name: alertmanager
  type: ClusterIP
